# cuda_stuff

./: .gitignore  README.md
cv2_video/: haar_cascade.py  people_finder.py  plot.py  trackbar.py
example/: .gitignore  fft_stream.cu  fft_stream_2.cu  fft_stream_arm.cu
fft/: CMakeLists.txt  CudaUtils.h  Fft.cpp  Fft.h  FftTypes.h  GpuFft.cu  GpuFft.h  Makefile  Queue.h  TimeStat.h  fft_tester.cpp  gpufft.cu  gpufft.h  test.cpp  test.py
fft/scripts/: plot.py
